<resources>
    <string name="app_name">Keep Your Distance</string>

    <!-- Notifications -->
    <string name="notification_title_service_running">Listening for Other Devices</string>
    <string name="notification_text_service_running">Tap to turn off</string>
    <string name="notification_text_device_detected">A wireless device is detected close to you.</string>
    <string name="notification_title_device_detected">Device Too Close</string>
    <string name="notification_channel_name_detection_service">Proximity Service</string>
    <string name="notification_channel_description_detection_service">Background service for detecting device proximity to this device</string>

    <!-- Preferences -->
    <string name="pref_category_detection">Detection</string>
    <string name="pref_category_appearance">Appearance</string>
    <!-- Preference: Detection -->
    <string name="pref_key_detection_enabled">detection_enabled</string>
    <string name="pref_title_detection_enabled">Background Detection</string>
    <string name="pref_summaryon_detection_enabled">Enabled - auto start/stop allowed</string>
    <string name="pref_summaryoff_detection_enabled">Disabled - will not auto start</string>
    <!-- Preference: Theme -->
    <string name="pref_key_theme" translatable="false">theme_day_night</string>
    <string name="pref_value_theme_system_default" translatable="false">system_default</string>
    <string name="pref_value_theme_light" translatable="false">light</string>
    <string name="pref_value_theme_dark" translatable="false">dark</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_text_theme_system_default">System default</string>
    <string name="pref_text_theme_light">Light</string>
    <string name="pref_text_theme_dark">Dark</string>

    <!-- Fragments -->
    <string name="fragment_name_settings">Settings</string>
    <string name="fragment_name_settings_advanced">Advanced Settings</string>
</resources>
