<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="caffeinatedandroid.keepyourdistance.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_mainFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="caffeinatedandroid.keepyourdistance.ui.settings.SettingsFragment"
        android:label="@string/fragment_name_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_advancedSettingsFragment"
            app:destination="@id/advancedSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/advancedSettingsFragment"
        android:name="caffeinatedandroid.keepyourdistance.ui.settings.AdvancedSettingsFragment"
        android:label="@string/fragment_name_settings_advanced" />
</navigation>